# term-slack-bot

./: README.md  app.yaml  pyproject.toml  run.py  slackbot_settings.py
.github/workflows/: dev.yaml  published.yaml
infra/: cloudbuild.yaml
