[tool.poetry]
name = "term_slack_bot"
version = "1.0.0"
description = ""
authors = ["shikajiro <shikajiro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
slackbot = "^1.0.0"
gspread = "^3.7.0"
oauth2client = "^4.1.3"
jaconv = "^0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
